--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ965fqDDFJHkQa6kuWbPRA82PaqJubBw4gtQ&usqp=CAU">
     <title>To-Do App</title>
 
     
