--- a/Excel_clone/index.html
+++ b/Excel_clone/index.html
@@ -81,6 +81,6 @@
 </body>
 <script src="./util.js"></script>
 <script src="./init.js"></script>
-<script src="script.js"></script>
-<script src="sheets.js"></script>
+<script src="./script.js"></script>
+<script src="./sheets.js"></script>
 </html>
