--- a/Excel_clone/index.html
+++ b/Excel_clone/index.html
@@ -33,21 +33,21 @@
             <option value="">Cursive</option>
         </select>
          <select name="" id="" class="font-size-selector selector" >
-            <option value="">12px</option>
-            <option value="">13px</option>
-            <option value="">14px</option>
-            <option value="">16px</option>
-            <option value="">18px</option>
-            <option value="">20px</option>
-            <option value="">22px</option>
-            <option value="">24px</option>
-            <option value="">28px</option>
-            <option value="">32px</option>
+            <option value="12px">12px</option>
+            <option value="13px">13px</option>
+            <option value="14px">14px</option>
+            <option value="16px">16px</option>
+            <option value="18px">18px</option>
+            <option value="20px">20px</option>
+            <option value="22px">22px</option>
+            <option value="24px">24px</option>
+            <option value="28px">28px</option>
+            <option value="32px">32px</option>
         </select>
 
-        <div class="material-icons menu-icon">format_bold</div>
-        <div class="material-icons menu-icon">format_italic</div>
-        <div class="material-icons menu-icon">format_underline</div>
+        <div class="material-icons menu-icon bold">format_bold</div>
+        <div class="material-icons menu-icon italic">format_italic</div>
+        <div class="material-icons menu-icon underline">format_underline</div>
         <div class="material-icons menu-icon">format_align_left</div>
         <div class="material-icons menu-icon">format_align_center</div>
         <div class="material-icons menu-icon">format_align_right</div>
@@ -83,4 +83,5 @@
 <script src="./init.js"></script>
 <script src="./script.js"></script>
 <script src="./sheets.js"></script>
+<script src="./menu.js"></script>
 </html>
